# MessageBusSchema

./: .gitignore  MANIFEST.in  README.md  clean.sh  docker-compose-no-ssl-kafka.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
fabric/: __init__.py
fabric/message_bus/: admin.py  base.py  consumer.py  message_bus_exception.py  producer.py
fabric/message_bus/messages/: AddSliceAvro.py  AddSliceRequestAvro.py  AuthAvro.py  ClaimAvro.py  ClaimResourcesAvro.py  ClaimResourcesResponseAvro.py  CloseAvro.py  CloseReservationsAvro.py  ExtendLeaseAvro.py  ExtendTicketAvro.py  FailedRPCAvro.py  GetReservationsRequest.py  GetReservationsResponse.py  GetSlicesRequestAvro.py  (+110 more)
fabric_mb/: __init__.py
fabric_mb/message_bus/: abc_mb_api.py  admin.py  consumer.py  producer.py
message_bus/: admin.py  consumer.py  message.py  producer.py
message_bus/messages/: AddSliceRequestAvro.py  AuthAvro.py  ClaimAvro.py  ClaimResourcesAvro.py  ClaimResourcesResponseAvro.py  CloseAvro.py  ExtendLeaseAvro.py  ExtendTicketAvro.py  FailedRPCAvro.py  GetReservationsRequest.py  GetReservationsResponse.py  GetSlicesRequestAvro.py  GetSlicesResponseAvro.py  LeaseReservationMng.py  ModifyLeaseAvro.py  QueryAvro.py  QueryResultAvro.py  RedeemAvro.py  RelinquishAvro.py  RemoveSliceAvro.py  ReservationAvro.py  ReservationMng.py  ResourceSetAvro.py  SliceAvro.py  StatusResponseAvro.py  TermAvro.py  TicketAvro.py  TicketReservationMng.py  UpdateLeaseAvro.py  UpdateSliceRequestAvro.py  UpdateTicketAvro.py  message.py
message_bus/schema/: message.avsc
secrets/: create-certs.sh
(+96 files in other folders)
