[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric-message-bus"
authors = [{name="Komal Thareja", email="kthare10@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "Fabric Message Bus Schema"
dynamic = ["version"]

keywords = ["Kafka", "Fabric Message Bus Schema", "Avro"]

requires-python = '>=3.9'
dependencies = ["confluent-kafka[avro]"]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/MessageBusSchema"

[tool.flit.module]
name = "fabric_mb"